--- a/contact.html
+++ b/contact.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Contact</h1>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut similique saepe modi neque qui sunt porro natus soluta sed? Vel expedita quisquam, rem, natus numquam impedit autem excepturi quidem delectus magni cupiditate omnis minima voluptatibus optio ex? Totam, dolore rerum!</p>
 </body>
 </html>
