--- a/gallery.html
+++ b/gallery.html
@@ -7,5 +7,9 @@
   </head>
   <body>
     i am awesome gallery page
+    <img
+      src="https://cdn.pixabay.com/photo/2023/11/19/10/19/sheet-music-8398449_1280.jpg"
+      alt=""
+    />
   </body>
 </html>
